--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://64c89ad6733b393ccccc7b20--bright-bonbon-a8f2f9.netlify.app/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
